--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,11 @@
 */*/.DS_Store
 
 # ipynb_checkpoints
-tf.version.1/*/.ipynb_checkpoints
-tf.version.2/*/.ipynb_checkpoints
+tf.version.*/*/.ipynb_checkpoints
 
 # graph or train folder
-tf.version.1/*/graphs
-tf.version.2/*/graphs
-tf.version.1/*/train
-tf.version.2/*/train
+tf.version.*/*/graphs
+tf.version.*/*/train
 
 # checkpoints folder
 checkpoints
